--- a/notebooks/crackClassification.ipynb
+++ b/notebooks/crackClassification.ipynb
@@ -1,5 +1,15 @@
 {
   "cells": [
+     {
+      "cell_type": "markdown",
+      "source": [
+        "Treinamento com o dataset produzido pelos pesquisadores - Imagens Térmicas"
+      ],
+      "metadata": {
+        "id": "VpfAq_3AqbLm"
+      }
+    },
+
     {
       "cell_type": "markdown",
       "source": [
