--- a/notebooks/crackClassification.ipynb
+++ b/notebooks/crackClassification.ipynb
@@ -4,6 +4,8 @@
       "cell_type": "markdown",
       "source": [
         "Treinamento com o dataset produzido pelos pesquisadores - Imagens Térmicas"
+        "Dataset com xx imagens ( sendo x para teste e x para treinamento), Algoritmo para aumentar o dataset usado foi xx, Número de épocas xx , Quantidade de imagens de treinamento (14000), Imagens de validação 33"
+        "Exemplos de imagens positivas e negativas. Tabelas e gráficos pertinentes, Tempo, memória, processador"
       ],
       "metadata": {
         "id": "VpfAq_3AqbLm"
